style.css
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap");

:root {
  --very-dark-greyish-blue: hsl(217, 19%, 35%);
  --desaturated-dark-blue: hsl(214, 17%, 51%);
  --greyish-blue: hsl(212, 23%, 69%);
  --light-greyish-blue: hsl(210, 46%, 95%);
}

body {
  font-size: 13px;
  font-weight: 500;
  font-family: "Manrope", sans-serif;
  min-width: 375px;
  background: var(--light-greyish-blue);
  /* background-image: url(./design/mobile-design.jpg); */
}

.article-preview {
  max-width: 327px;
  background: white;
  margin: 75px auto;
  border-radius: 10px;
  /* opacity: 0.2; */
}

.article-preview .image {
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  max-height: 199px;
  width: 100%;
}

.article-preview .content {
  margin: 30px;
}

.article-preview .heading {
  color: var(--very-dark-greyish-blue);
  font-size: 1.03rem;
  line-height: 1.5rem;
}

.article-preview .synopsis {
  margin-top: 13px;
  margin-right: 6px;
  color: var(--greyish-blue);
  font-size: 0.83rem;
  line-height: 1.25rem;
}

.author {
  margin: 30px 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-bottom: 15px;
}

.author .avatar {
  border-radius: 50%;
  width: 40px;
  height: 40px;
}

.author .details {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  margin: 2px 16px;
}

.author .name {
  margin: 0;
  font-size: 0.83rem;
  color: var(--very-dark-greyish-blue);
}

.author .date {
  margin: 2px 0;
  color: var(--greyish-blue);
}

.toggle-button {
  background: var(--light-greyish-blue);
  background-image: url(./images/icon-share.svg);
  background-position: center;
  background-repeat: no-repeat;
  border-radius: 50%;
  border: none;
  padding: 15px;
  cursor: pointer;
}
.toggle-button:hover {
  background: var(--greyish-blue);
  background-image: url(./images/icon-share-light.svg);
  background-position: center;
  background-repeat: no-repeat;
}

.author-social {
  background: var(--very-dark-greyish-blue);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-top: 30px;
  margin-right: -30px;
  margin-left: -30px;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  padding: 16px 30px;
}

.author-social .label {
  color: var(--greyish-blue);
  text-transform: uppercase;
  font-size: 0.8rem;
  letter-spacing: 0.4rem;
  font-weight: bold;
}
.author-social .social-icons {
  margin-right: 30px;
}
.author-social .social-icons img {
  margin-right: 10px;
}

.author-social .toggle-button {
  background: var(--desaturated-dark-blue);
  background-image: url(./images/icon-share-light.svg);
  background-position: center;
  background-repeat: no-repeat;
}

.author-social .toggle-button:hover {
  background: var(--light-greyish-blue);
  background-image: url(./images/icon-share.svg);
  background-position: center;
  background-repeat: no-repeat;
}

.hidden {
  display: none;
}

.attribution {
  font-size: 11px;
  text-align: center;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

/* Media Query: Tablet */
@media (min-width: 700px) {
}

/* Media Query: Desktop */
@media (min-width: 1400px) {
}

